as sent to heckman

--- a/Appendices/Genderdifferences.tex
+++ b/Appendices/Genderdifferences.tex
@@ -4,7 +4,7 @@
 \subsection{Survey of Gender Differences Literature}
 \label{appendix:gdiff-survey}
 
-We summarize (Table~\ref{tab:litreview-table}) work that examines early-life differences between boys and girls. It is generally found that boys are more fragile than girls early in life. While some of these papers consider the family environment, there is a dearth of work studying (1) the effect of low-quality preschool on children\footnote{Although \citet{Kottelenberg-Lehrer_2014_Gender-Effects} study gender gaps, they only consider intact families.} and (2) the interaction of this with family environments. We find that while low-quality programs can deteriorate the parent-child interaction, especially for boys, high-quality programs can enhance it.
+We summarize (Table~\ref{tab:litreview-table}) work that examines early-life differences between boys and girls. It is generally found that boys are more fragile than girls early in life. While some of these papers consider the family environment, there is a dearth of work studying (1) the effect of low-quality preschool on children\footnote{Although \citet{Kottelenberg_Lehrer_2014_Gender-Effects} study gender gaps, they only consider intact families.} and (2) the interaction of this with family environments. We find that while low-quality programs can deteriorate the parent-child interaction, especially for boys, high-quality programs can enhance it.
 
 \begin{sidewaystable}[H]
 \centering
@@ -190,7 +190,7 @@ Note: This table reproduces the control-group means and estimated treatment effe
 \subsection{Proportion of Outcomes Males $>$ Females}
 \label{appendix:propmales-females}
 
-Tables~\ref{tab:proportion-table-home} and~\ref{tab:proportion-table-alt} show the analogue of Table~\ref{tab:proportion-table} but comparing to subjects in the the control group that stays at home and attend alternative preschool, respectively. Figure~\ref{fig:proportion-fhome} partitions the data by whether the father is present.
+Tables~\ref{tab:proportion-table-home} and~\ref{tab:proportion-table-alt} compares ABC/CARE to subjects in the the control group who stay at home and attend alternative preschool, respectively. Figure~\ref{fig:proportion-fhome} partitions the data by whether the father is present.
 
 
 \begin{table}[H]
