--- a/output/genderdifflit.tex
+++ b/output/genderdifflit.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{cccccc} \toprule											
 \textbf{Paper}	&	\textbf{Program(s)}	&	\textbf{Main Gender-Difference Finding}	&	\textbf{Outcomes}	&	\textbf{Quality of Childcare Setting?} 	&	\textbf{Quality of Home Setting?} 	\\ \midrule
-\citet{lundberg2005sons}	&	Literature survey	&	-females: divorce is likely if all children are girls	&	-fertility and divorce	&	No	&	No	\\ 
+\citet{Lundberg_2005_ParentalBehav_OREP}	&	Literature survey	&	-females: divorce is likely if all children are girls	&	-fertility and divorce	&	No	&	No	\\ 
 	&		&	less likely to live with fathers (US), spends more 	&		&		&		\\ 
 	&		&	time with mothers	&		&		&		\\ 
 	&		&	-males: increase marital stability, increase 	&		&		&		\\ 
@@ -19,17 +19,17 @@
 	&		&	(gaps widen when children get older)	&	- tests scores (math and reading)	&		&		\\ 
 	&		&	- males: worst at reading but better than math at 	&		&		&		\\ 
 	&		&	1st grade	&		&		&		\\ \\ \midrule
-\citet{cornwell2013noncognitive}	&	ECLS-K 	&	Gender differences in tests and grades	&	-reading, science, math tests scores 	&	No	&	No	\\ 
+\citet{Cornwell_Mustard_VanParys_2013_TJHR}	&	ECLS-K 	&	Gender differences in tests and grades	&	-reading, science, math tests scores 	&	No	&	No	\\ 
 	&	-observational study up to 5th grade	&	-males: better in science and math; worst grades	&	-grades	&		&		\\ 
 	&		&	overall 	&	-socio-emotional measures	&		&		\\ 
 	&		&	females: better reading tests (gap wider than 	&		&		&		\\ 
 	&		&	gap with respect to science and math)	&		&		&		\\ 
 	&		&	- some but bot all of the gaps disappears when	&		&		&		\\ 
 	&		&	accounting for socio-emotional measures 	&		&		&		\\ \\ \midrule
-\citet{golsteyn2014gender}	&	Observational study in the Netherlands	&	Gender differences across skills and tests	&	-cognition	&	N/A 	&	No	\\ 
+\citet{Golsteyn_Schils_2014_EER}	&	Observational study in the Netherlands	&	Gender differences across skills and tests	&	-cognition	&	N/A 	&	No	\\ 
 	&	- elementary school children, age 11/12 	&	- males: higher assertiveness and math	&	-socio-emotional measures	&		&		\\ 
 	&		&	-females: higher social skills and language	&	-math and language tests	&		&		\\ \\ \midrule
-\citet{kottelenberg_Gender}	&	NLSCY	&	-females: better parent-child relationship and 	&	-cognition	&	No	&	Yes	\\ 
+\citet{Kottelenberg_Lehrer_2014_Gender-Effects}	&	NLSCY	&	-females: better parent-child relationship and 	&	-cognition	&	No	&	Yes	\\ 
 	&		&	interactions across diverse measures	&	- socio-emotional outcomes	&		&		\\ 
 	&		&	- no precise difference in cognition	&	-parental child relationship and quality of interactions	&		&		\\ 
 	&		&		&	-maternal labor supply	&		&		\\ \\ \midrule
