ready for proofread and then send

--- a/Appendices/Health/validation.tex
+++ b/Appendices/Health/validation.tex
@@ -1,23 +1,23 @@
 \subsection{Validation}
 \label{appendix:health-validation}
-\noindent To evaluate the performance of the full version of the FAM model, we validate it using various techniques. \\
+\noindent To evaluate the performance of the full version of the FAM model, we validate it using various techniques. 
 %including comparing model results from early years with actual data available for later years.\footnote{\citet{Goldman_etal_2015_Future-America-Model}.} 
 
 \subsubsection{Cross-validation}
-\noindent The cross-validation exercise randomly samples half of the PSID respondent IDs for use in estimating the transition models. The respondents not used for estimation, but who were present in the PSID sample in 1999, are then simulated from 1999 through 2013. Demographic, health, and economic outcomes are compared between the simulated (FAM) and actual (PSID) populations. \\
+\noindent The cross-validation exercise randomly samples half of the PSID respondent IDs for use in estimating the transition models. The respondents not used for estimation, but who were present in the PSID sample in 1999, are then simulated from 1999 through 2013. Demographic, health, and economic outcomes are compared between the simulated (FAM) and actual (PSID) populations. 
 
-\noindent It is worth noting how the composition of the population changes in this exercise: In 1999, the sample represents those 25 and older. Since we follow a fixed cohort, the age of the population will increase to 39 and older in 2013. This has consequences for some measures in later years where the eligible population shrinks.\\
+\noindent It is worth noting how the composition of the population changes in this exercise: In 1999, the sample represents those 25 and older. Since we follow a fixed cohort, the age of the population will increase to 39 and older in 2013. This has consequences for some measures in later years where the eligible population shrinks.
 
 \noindent\textbf{Demographics}
-Mortality and demographic measures are presented in Tables~\ref{table:crossval_unweighted} and \ref{table:crossval_demog}. Mortality incidence is comparable between the simulated and observed populations. Demographic characteristics do not differ between the two.\\
+Mortality and demographic measures are presented in Tables~\ref{table:crossval_unweighted} and \ref{table:crossval_demog}. Mortality incidence is comparable between the simulated and observed populations. Demographic characteristics do not differ between the two.
 
 \noindent\textbf{Health Outcomes}
-Binary health outcomes are presented in Table~\ref{table:crossval_binhlth}. FAM underestimates the prevalence of ADL and IADL limitations compared to the cross-validation sample. Binary outcomes, like cancer, diabetes, heart disease, and stroke do not differ. FAM underforecasts hypertension and lung disease compared to the cross-validation sample.\\
+Binary health outcomes are presented in Table~\ref{table:crossval_binhlth}. FAM underestimates the prevalence of ADL and IADL limitations compared to the cross-validation sample. Binary outcomes, like cancer, diabetes, heart disease, and stroke do not differ. FAM underforecasts hypertension and lung disease compared to the cross-validation sample.
 
 \noindent\textbf{Health Risk Factors}
-Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statistically different between the two samples. Current smoking is not statistically different, but more individuals in the cross-validation sample report being former smokers.\\
+Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statistically different between the two samples. Current smoking is not statistically different, but more individuals in the cross-validation sample report being former smokers.
 
-\noindent On the whole, the cross-validation exercise is reassuring. There are aspects that will be explored and improved upon in the future.\\
+\noindent On the whole, the cross-validation exercise is reassuring. There are aspects that will be explored and improved upon in the future.
 
 \begin{table}[H]
 \begin{threeparttable}
@@ -76,7 +76,7 @@ Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statis
 \end{table}
 
 \subsubsection{External Corroboration}
-\noindent Finally, we compare FAM population forecasts to Census forecasts of the US population. Here, we focus on the full PSID population (25 and older) and those 65 and older. For this exercise, we begin the simulation in 2009 and simulate the full population through 2049. Population projections are compared to the 2012 Census projections for years 2012 through 2049. See results in Table~\ref{table:external_pop}. By 2049, FAM forecasts for 25 and older remain within 2\% of Census forecasts.\\
+\noindent Finally, we compare FAM population forecasts to Census forecasts of the US population. Here, we focus on the full PSID population (25 and older) and those 65 and older. For this exercise, we begin the simulation in 2009 and simulate the full population through 2049. Population projections are compared to the 2012 Census projections for years 2012 through 2049. See results in Table~\ref{table:external_pop}. By 2049, FAM forecasts for 25 and older remain within 2\% of Census forecasts.
 
 \begin{table}[H]
 \begin{threeparttable}
