--- a/Appendices/Sensitivity.tex
+++ b/Appendices/Sensitivity.tex
@@ -1,6 +1,6 @@
 \section{Sensitivity Analysis} \label{appendix:sensitivity}
 
-\noindent Figure~\ref{figure:ranges} summarizes the range of all of the estimates that we generate in this paper. The overall benefit/cost ratio (internal rate of return) ranges from 1.52 to 17.40 (8 to 18.3) for the full sample. They range from 2.23 to 25.45 (6 to 19.4) for the males, and from 1.12 to 5.79 (4 to 18) for the females. Benefits from reductions in criminality and increased labor income are pronounced for males, contributing to their larger estimates relative to the females estimates. However, when we omit crime from our analysis, we still estimate substantial returns for males.\\
+\noindent Figure~\ref{figure:ranges} summarizes the range of all of the estimates that we generate in this paper. The overall benefit/cost ratio (internal rate of return) ranges from 1.52 to 17.40 (8 to 18.3) for the full sample. They range from 2.23 to 25.45 (6 to 19.4) for the males, and from 1.12 to 5.79 (4 to 18) for the females. Benefits from reductions in criminality and increased labor income are pronounced for males, contributing to their larger estimates relative to the females estimates. However, when we omit crime from our analysis, we still estimate substantial returns for males.
 
 \begin{sidewaysfigure}[H]
 \centering
@@ -19,7 +19,7 @@
 Note: Panel (a) displays the distribution of estimates of the benefit/cost ratio that we estimate throughout the paper. Vertical lines indicate the baseline estimates, presented in Figure~\ref{figure:main}. Panel (b) presents the analogous figure for the internal rate of return. See Figure~\ref{figure:ranges-NPV} in Appendix~\ref{appendix:sensitivity} for the analogous plots of net present values.
 \end{sidewaysfigure}
 
-\noindent This appendix evaluates how the estimates in the main paper vary as we alter certain sample selections from all of our data sources and other parameters. We first present plot of all net present value estimations across specifications in Figure~\ref{figure:ranges-NPV}. This is analogous to Figure~\ref{figure:ranges}.\\
+\noindent This appendix evaluates how the estimates in the main paper vary as we alter certain sample selections from all of our data sources and other parameters. We first present plot of all net present value estimations across specifications in Figure~\ref{figure:ranges-NPV}. This is analogous to Figure~\ref{figure:ranges}.
 
 \begin{figure}[H]
 \centering
@@ -53,7 +53,7 @@ Note: This figure displays the distribution of estimates of the net present valu
 %are, but also which components or assumptions are responsible for any instabilities
 %we find in our estimates.
 
-\noindent Below we examine how the benefit/cost ratio is impacted by our choice of the discount rate. \\
+\noindent Below we examine how the benefit/cost ratio is impacted by our choice of the discount rate. 
 
 \noindent Figure \ref{fig:bcr_discount} displays how the benefit/cost ratio changes as we adjust
 the rate at which we discount the cash flows. We find that for males, the benefits of 
@@ -100,7 +100,7 @@ the discount rate, especially for males.
 \label{appendix:varying-dwl}
 
 \noindent Below we examine how our estimates of the internal rate of return (IRR) and benefit/cost
-ratios move with respect to changes in the marginal cost of welfare. \\
+ratios move with respect to changes in the marginal cost of welfare. 
 
 \noindent Figure \ref{fig:irr_dwl} shows how the IRR changes as we adjust
 the marginal cost of welfare. For both males and females, we find the IRRs
@@ -186,7 +186,7 @@ case of QALYs, the multiplicative factors correspond to different valuations of 
 health, e.g., a QALY equal to 1. For instance, as our current estimates assume a QALY of 1 to be worth
 \$150,000, a factor of 0.5 corresponds to a year of perfect health being
 worth \$75,000, and a factor of 3 corresponds to a year of perfect health
-being worth \$450,000 (all values are in 2014 USD). \\
+being worth \$450,000 (all values are in 2014 USD). 
 
 \noindent Figure \ref{fig:irrf_factor_f} displays how the IRR for females
 changes as we multiply each component by a factor between 0 and 3. We find that the IRR
