--- a/Appendices/Education.tex
+++ b/Appendices/Education.tex
@@ -1,15 +1,15 @@
 \section{Costs of Education} \label{appendix:education}
 
-\noindent We account for short- and long-term components of educational costs. The short-term components include savings due to reductions in special education and grade retention. The long-term components include the type and level of the highest educational attainment at age 30. We do not calculate costs of education beyond age 30 because we do not have data on the subjects' later educational attainment. Instead of forming a projection of future education costs, we do not add further modeling uncertainty through this component and document that, at the national level, education beyond age 30 increases marginally. To document this, we use the Panel Study of Income Dynamics (PSID) for a representative sample of individuals born between 1972 and 1982. \\
+\noindent We account for short- and long-term components of educational costs. The short-term components include savings due to reductions in special education and grade retention. The long-term components include the type and level of the highest educational attainment at age 30. We do not calculate costs of education beyond age 30 because we do not have data on the subjects' later educational attainment. Instead of forming a projection of future education costs, we do not add further modeling uncertainty through this component and document that, at the national level, education beyond age 30 increases marginally. To document this, we use the Panel Study of Income Dynamics (PSID) for a representative sample of individuals born between 1972 and 1982. 
 
 \noindent To estimate the costs of additional schooling, we combine various sources. Table \ref{tab:yearlyedu}  describes the yearly cost of education at every level and the age and duration for which these costs are incurred. We apply these costs additively up to the highest level of educational attainment by age 30. Pooling males and females, the treatment groups had on average higher attainment and incurred a greater cost of education. To find the present value of the difference between the treatment and control groups, we first array educational attainment by stage as in Table \ref{tab:yearlyedu}. We find a difference between the average educational attainment of the treatment groups (finish community college) and the average educational attainment of the control groups (start community college). This can be represented as a cost that is \$12,586 higher for the treatment groups than for the control groups, as in Table \ref{tab:yearlyedu}. The effect of the program on the educational attainment of females, however, is much greater than the effect on that of males.
 
 \subsection{Measuring Lifetime Educational Attainment}
 
-\noindent Follow-up data on educational attainment were collected for ABC/CARE subjects up to age 30, on average. This may not necessarily be an accurate measure of lifetime educational attainment. Thus, we perform an exercise using nationally representative data from the Panel Study of Income Dynamics (PSID) to assess educational attainment after age 30. We find only one additional year of schooling for individuals between the ages of 40 and 60. \\
+\noindent Follow-up data on educational attainment were collected for ABC/CARE subjects up to age 30, on average. This may not necessarily be an accurate measure of lifetime educational attainment. Thus, we perform an exercise using nationally representative data from the Panel Study of Income Dynamics (PSID) to assess educational attainment after age 30. We find only one additional year of schooling for individuals between the ages of 40 and 60. 
 
 \subsection{Cost of Education}
-\noindent We apply the costs described in Table \ref{tab:yearlyedu} to subjects' educational attainment at age 30 to calculate the public and private costs of lifetime educational attainment. Costs up to high school are assumed to be public costs. \\
+\noindent We apply the costs described in Table \ref{tab:yearlyedu} to subjects' educational attainment at age 30 to calculate the public and private costs of lifetime educational attainment. Costs up to high school are assumed to be public costs. 
 
 \begin{table}[H]
 \caption{Yearly Individual Education Costs} \label{tab:yearlyedu}
