--- a/abc_comprehensivecba_appendix-pub.tex
+++ b/abc_comprehensivecba_appendix-pub.tex
@@ -12,16 +12,30 @@
 \titlespacing*{\paragraph}
 {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 
-\externaldocument{abc_comprehensivecba}
+\externaldocument{abc_comprehensivecba_revised}
+\externaldocument{abc_comprehensivecba_answerstoreferees}
 
 \pagenumbering{roman}
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
-\title{\Large \textbf{Appendix: \\ The Life-cycle Benefits of \\ High-Quality Early Childhood Education}}
+\title{\Large \textbf{Appendix: \\ Quantifying the Life-cycle Benefits of an \\ Influential Early Childhood Program}}
 
-\author{Jorge Luis Garc\'{i}a, James J. Heckman, Duncan Ermini Leaf, \\ and Mar\'{i}a Jos\'{e} Prados}
-\date{\today}
+\author{
+Jorge Luis Garc\'{i}a\\
+Department of Economics\\
+The University of Chicago \and
+James J. Heckman \\
+American Bar Foundation \\
+Department of Economics\\
+The University of Chicago \and
+Duncan Ermini Leaf \\
+Leonard D. Schaeffer Center \\  for Health Policy and Economics\\
+University of Southern California \and
+Mar\'{i}a Jos\'{e} Prados \\
+Dornsife Center for \\ Economic and Social Research\\
+University of Southern California}
+\date{First Draft: January 5, 2016\\ This Draft: \today}
 
 
 \maketitle
