--- a/preamble.tex
+++ b/preamble.tex
@@ -100,6 +100,8 @@
 \newtheorem{algorithm}{Algorithm}
 \newtheorem{assumption}{Assumption}
 \renewcommand\theassumption{A--\arabic{assumption}}
+\newtheorem{remark}{Remark}
+\renewcommand\theremark{R--\arabic{remark}}
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem{hypothesis}[theorem]{Hypothesis}
 \newtheorem{property}[theorem]{Property}
