--- a/preambleappendix.tex
+++ b/preambleappendix.tex
@@ -101,6 +101,8 @@
 \newtheorem{algorithm}{Algorithm}
 \newtheorem{assumption}{Assumption}
 \renewcommand\theassumption{A--\arabic{assumption}}
+\newtheorem{remark}{Remark}
+\renewcommand\theremark{R--\arabic{remark}}
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem{hypothesis}[theorem]{Hypothesis}
 \newtheorem{property}[theorem]{Property}
@@ -116,6 +118,8 @@
 \captionsetup[table]{skip=10pt}
 %\makeindex
 
+\setlength\parindent{0pt}
+\setlength{\parskip}{10pt}
 
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
