revised paper sent to heckman

--- a/heckman.bib
+++ b/heckman.bib
@@ -1,48 +1,6 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
-@article{geyer2015effects,
-  title={The effects of family policy on maternal labor supply: Combining evidence from a structural model and a quasi-experimental approach},
-  author={Geyer, Johannes and Haan, Peter and Wrohlich, Katharina},
-  journal={Labour Economics},
-  volume={36},
-  pages={84--98},
-  year={2015},
-  publisher={Elsevier}
-}
-
-@article{bettendorf2015childcare,
-  title={Childcare subsidies and labour supply—Evidence from a large Dutch reform},
-  author={Bettendorf, Leon JH and Jongen, Egbert LW and Muller, Paul},
-  journal={Labour Economics},
-  volume={36},
-  pages={112--123},
-  year={2015},
-  publisher={Elsevier}
-}
-
-@article{brilli2016does,
-  title={Does child care availability play a role in maternal employment and children’s development? Evidence from Italy},
-  author={Brilli, Ylenia and Del Boca, Daniela and Pronzato, Chiara D},
-  journal={Review of Economics of the Household},
-  volume={14},
-  number={1},
-  pages={27--51},
-  year={2016},
-  publisher={Springer}
-}
-
-
-@article{bauernschuster2015public,
-  title={Public child care and mothers' labor supply—Evidence from two quasi-experiments},
-  author={Bauernschuster, Stefan and Schlotter, Martin},
-  journal={Journal of Public Economics},
-  volume={123},
-  pages={1--16},
-  year={2015},
-  publisher={Elsevier}
-}
-
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
@@ -6172,6 +6130,18 @@
   Timestamp                = {2009.01.16}
 }
 
+@Article{Bauernschuster_Schlotter_2015_JPE,
+  Title                    = {Public Child Care and Mothers' Labor Supply---Evidence from Two Quasi-Experiments},
+  Author                   = {Bauernschuster, Stefan and Schlotter, Martin},
+  Journal                  = {Journal of Public Economics},
+  Year                     = {2015},
+  Pages                    = {1--16},
+  Volume                   = {123},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.07}
+}
+
 @Article{Baum_2003_Maternal-Employment,
   Title                    = {Does Early Maternal Employment Harm Child Development? {A}n Analysis of the Potential Benefits of Leave Taking},
   Author                   = {Baum II, Charles L.},
@@ -8453,6 +8423,18 @@ Welfare Reform Academy},
   Number                   = {4},
   Pages                    = {792--810},
   Volume                   = {83}
+}
+
+@Article{Bettendorf_etal_2015_LE,
+  Title                    = {Childcare Subsidies and Labour Supply --- Evidence from a Large {D}utch Reform},
+  Author                   = {Bettendorf, Leon J.H. and Jongen, Egbert L.W. and Muller, Paul},
+  Journal                  = {Labour Economics},
+  Year                     = {2015},
+  Pages                    = {112--123},
+  Volume                   = {36},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.07}
 }
 
 @Article{Bettinger_Long_etal_2012_QJoE,
@@ -12394,6 +12376,19 @@ Welfare Reform Academy},
   Date-modified            = {2013-07-22 16:25:01 +0000},
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.03.01}
+}
+
+@Article{Brilli_etal_2016_REH,
+  Title                    = {Does Child Care Availability Play a Role in Maternal Employment and Childrenís Development? Evidence from {I}taly},
+  Author                   = {Brilli, Ylenia and Del Boca, Daniela and Pronzato, Chiara D.},
+  Journal                  = {Review of Economics of the Household},
+  Year                     = {2016},
+  Number                   = {1},
+  Pages                    = {27--51},
+  Volume                   = {14},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.07}
 }
 
 @Article{Brinch_Galloway_2012_PNAS,
@@ -27728,6 +27723,16 @@ Welfare Reform Academy},
   Url                      = {http://www.fbi.gov/ucr/02cius.htm}
 }
 
+@TechReport{FIFCFS_2009_Wellbeing_REPORT,
+  Title                    = {Americaís Children: Key Indicators of Well-Being, 2009},
+  Author                   = {{Federal Interagency Forum on Child and Family Statistics}},
+  Institution              = {{Washington DC: U.S. Government Printing Office}},
+  Year                     = {2009},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.09}
+}
+
 @TechReport{FederalInteragency__2007_BOOKAmericasChildren,
   Title                    = {{A}merica's Children: Key National Indicators of Well-Being, 2007},
   Author                   = {{Federal Interagency Forum on Child and Family Statistics}},
@@ -32199,6 +32204,18 @@ Welfare Reform Academy},
   Owner                    = {Jenni},
   Timestamp                = {2013.05.11},
   Url                      = {http://www.jstor.org/stable/1914306}
+}
+
+@Article{Geyer_etal_2015_LE,
+  Title                    = {The Effects of Family Policy on Maternal Labor Supply: Combining Evidence from a Structural Model and a Quasi-experimental Approach},
+  Author                   = {Geyer, Johannes and Haan, Peter and Wrohlich, Katharina},
+  Journal                  = {Labour Economics},
+  Year                     = {2015},
+  Pages                    = {84--98},
+  Volume                   = {36},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.07}
 }
 
 @InCollection{Ghedini_2001_Ital-Natl-Policy,
@@ -43049,6 +43066,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2016.04.13}
 }
 
+@Article{Hillemeier_etal_2013_MCHJ,
+  Title                    = {Quality Disparities in Child Care for At-Risk Children: Comparing {H}ead {S}tart and Non-{H}ead {S}tart Settings},
+  Author                   = {Hillemeier, Marianne M. and Morgan, Paul L. and Farkas, George and Maczuga, Steven A.},
+  Journal                  = {Maternal and Child Health Journal},
+  Year                     = {2013},
+  Number                   = {1},
+  Pages                    = {180--188},
+  Volume                   = {17},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.09}
+}
+
 @Article{Himelstein_1966_PB,
   Title                    = {Research with the {S}tanford-{B}inet, Form {L}-{M}: The Five Years},
   Author                   = {Himelstein, Philip},
@@ -51112,6 +51142,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {63},
 
   Owner                    = {Lynn}
+}
+
+@Article{Lafortune_etal_2018_Reform_AEJAE,
+  Title                    = {School Finance Reform and the Distribution of Student Achievement},
+  Author                   = {Lafortune, Julien and Rothstein, Jesse and Schanzenbach, Diane Whitmore},
+  Journal                  = {American Economic Journal: Applied Economics},
+  Year                     = {2018},
+  Number                   = {2},
+  Pages                    = {1--26},
+  Volume                   = {10},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.09}
 }
 
 @Unpublished{Lagakos_Moll_etal_2016_LifeCycle_NBER,
@@ -81652,6 +81695,18 @@ early childhood education and pre-kindergarten programs},
   Owner                    = {Andrew},
   Timestamp                = {2015.11.02},
   Url                      = {https://www.census.gov/programs-surveys/acs/}
+}
+
+@TechReport{USCB_2014_CoverageReport,
+  Title                    = {Income, Poverty and Health Insurance Coverage in the {U}nited {S}tates: 2013},
+  Author                   = {{United States Census Bureau}},
+  Institution              = {{U.S. Department of Commerce}},
+  Year                     = {2014},
+  Number                   = {Release Number: CB14-169},
+  Type                     = {Press Release},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.09}
 }
 
 @TechReport{USDeptEdu_1999_Taking-Responsibility,
