--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -6,7 +6,7 @@ Baseline	&	\multicolumn{2}{c}{\textbf{7.33} (s.e. 1.84)}	&	\multicolumn{2}{c}{\t
 Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
 	&	\textbf{7.31}	&	\textbf{7.99}	&	\textbf{9.80}	&	\textbf{8.83}	&	\textbf{2.57}	&	\textbf{2.82}	\\
 	&	(1.81)	&	(2.18)	&	(2.69)	&	(2.72)	&	(0.72)	&	(0.68)	\\ \midrule
-Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
+Forecast	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
 Span	&	\textbf{1.52}	&	\textbf{3.19}	&	\textbf{2.23}	&	\textbf{3.84}	&	1.46	&	\textbf{1.81}	\\
 	&	(0.36)	&	(1.04)	&	(0.61)	&	(1.60)	&	(0.36)	&	(0.50)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
