--- a/output/allirr_sens.tex
+++ b/output/allirr_sens.tex
@@ -6,7 +6,7 @@ Baseline	&	\multicolumn{2}{c}{\textbf{13.7\%} (s.e. 3.3\%)}	&	\multicolumn{2}{c}
 Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
 	&	\textbf{13.2\%}	&	\textbf{14.0\%}	&	\textbf{13.9\%}	&	\textbf{13.0\%}	&	9.6\%	&	\textbf{10.0\%}	\\
 	&	(2.9\%)	&	(3.1\%)	&	(3.7\%)	&	(4.3\%)	&	(6.0\%)	&	(4.9\%)	\\ \midrule
-Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
+Forecast	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
 Span	&	\textbf{8.8\%}	&	\textbf{12.0\%}	&	\textbf{11.8\%}	&	12.8\%	&	\textbf{10.7\%}	&	\textbf{11.7\%}	\\
 	&	(4.5\%)	&	(3.4\%)	&	(4.8\%)	&	(4.7\%)	&	(5.8\%)	&	(5.2\%)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
