--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,6 @@
 %Style
 \documentclass[12pt]{article}
-\usepackage[top=1.5in, bottom=1.5in, left=1.5in, right=1.5in]{geometry}
+\usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
 \parindent 22pt
 \usepackage{fancyhdr}
 
@@ -40,6 +40,7 @@
 \usepackage{setspace}
 \usepackage{enumerate}
 \usepackage{rotating}
+\usepackage{tocloft}
 \usepackage{epstopdf}
 \usepackage[titletoc]{appendix}
 \usepackage{framed}
@@ -117,6 +118,8 @@
 \captionsetup[table]{skip=10pt}
 %\makeindex
 
+\setlength\parindent{20pt}
+\setlength{\parskip}{0pt}
 
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
