table of p-values for disadvantage in the control group

--- a/heckman.bib
+++ b/heckman.bib
@@ -2,6 +2,17 @@
 % Encoding: Cp1252
 
 
+@article{rosenbaum2005exact,
+  title={An exact distribution-free test comparing two multivariate distributions based on adjacency},
+  author={Rosenbaum, Paul R},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={67},
+  number={4},
+  pages={515--530},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
   Author                   = {d'Haultfoeuille, Xavier},
