--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -22,14 +22,14 @@ These aspects of the program relate to structural quality rather than process qu
 
 CARE included an additional arm of treatment. Besides the services in Table~\ref{tab:abc-care-characteristics}, those in the treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. To individually test this home-visiting component, there was a third randomized group ($N=23$) that received only the home visiting component, but not center-based care \citep{Wasik_Ramey_etal_1990_CD}. In light of previous analyses finding no effect of this component, we drop this last group from our analysis.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} test and do not reject the hypothesis of no treatment effects for this additional component of CARE.} These analyses justify merging the treatment groups of ABC and CARE, even though that of CARE received the additional home-visiting component \citep{ABCCARE_Dataset}. We henceforth analyze the samples as coming from a single ABC/CARE program. This combination is also seen in \citet{Burchinal_etal_2006_MSRCD_IV-Growth-Curve}.
 
-Table~\ref{tab:abccare-baseline} compares pre-program variables between experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. This indicates that males were slightly less advantaged at baseline. However, we do not account for multiple hypotheses meaning that with an $\alpha$ level of 10\%, we would expect, on average, one significant result out of ten hypotheses \citep{Romano_Wolf_2005_JASA}.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{app:eligibility-pop}.}
+Table~\ref{tab:abccare-baseline} compares pre-program variables between experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. This indicates that males were slightly less advantaged at baseline. However, after accounting for multiple hypotheses using the Holm test, the difference in HRI score is no longer significant \citep{holm1979simple}.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{app:eligibility-pop}.}
 
 \begin{table}[!htbp]
 \centering
 \caption{Baseline Differences, ABC/CARE}
 \label{tab:abccare-baseline}
 \begin{threeparttable}
-	\input{output/abccare-baseline_ready}
+	\input{output/abccare-baseline}
 \begin{tablenotes}
 \footnotesize
 \item Note: The variables in this table are all measured at the baseline age, close to when the children were born. A larger HRI (High Risk Index) score indicates more disadvantage. Apgar, measured at 1 and 5 minutes after birth, is a test of the health condition of newborn babies. A score closer to 10 indicates a healthier condition \citep{Apgar_1966_APGAR-Scoring_PCNA}. Birthweight is in pounds and gestational age is in weeks.
