boys girls disadvantage describe

--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -38,9 +38,13 @@ Random assignment to treatment does not directly identify \eqref{eq:influenza} o
 
 \subsection{Summarizing Multiple Treatment Effects}\label{sec:combining-functions}
 
-ABC/CARE has rich longitudinal data on multiple outcomes over multiple periods of the life cycle. Summarizing these effects in an interpretable way is challenging.\footnote{Appendix~\ref{appendix:results} presents step-down $p$-values for the blocks of outcomes that are used in the cost-benefit analysis of \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}. We follow the algorithm in \citet{Romano_Wolf_2016_pval_SaPL}.} Simpler, more digestible summary measures are useful for understanding our main findings. To construct these, we use combining functions that count the proportion of treatment effects that are positive by different categories of outcomes. In a companion paper \citep{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, we monetize outcomes and estimate rates of return and cost/benefit rates. This requires making an additional layer of assumptions to extrapolate lifetime benefits, which we avoid making in this paper. This cost/benefit analysis gives a weighted summary of the treatment effects, weighing by cost or benefit of the effect to society. The method described below does not weigh the individual effects by this or any other measure of ``importance.''
+ABC/CARE has rich longitudinal data on multiple outcomes over multiple periods of the life cycle. Summarizing these effects in an interpretable way is challenging.\footnote{Appendix~\ref{appendix:results} presents step-down $p$-values for the blocks of outcomes that are used in the cost-benefit analysis of \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}. We follow the algorithm in \citet{Romano_Wolf_2016_pval_SaPL}.} Simpler, more digestible summary measures are useful for understanding our main findings. To construct these, we use combining functions that count the proportion of treatment effects that are positive by different categories of outcomes. 
 
-Consider a block of $N_l$ outcomes indexed by set $Q_l = \{1,\dots,N_l\}$. Let $j \in Q_l$ be a particular outcome within block $l$. Associated with it is a mean treatment effect
+In a companion paper \citep{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, we monetize outcomes and estimate rates of return and cost/benefit rates. This requires making an additional layer of assumptions to extrapolate lifetime benefits, which we avoid making in this paper. This cost/benefit analysis gives a weighted summary of the treatment effects, weighing by cost or benefit of the effect to society. The method described below does not weigh the individual effects by this or any other measure of ``importance.''
+
+The combining functions provide us with an intuitive, digestible statistic. Despite being informative, the combining functions are admittedly arbitrary as an statistic such as are arbitrary, unweighted averages of treatment effects. We complement the tests arising from these functions with a non-parametric test on the joint distribution of outcomes grouped by categories developed by .
+
+\noindent \textbf{Combining Functions.} Consider a block of $N_l$ outcomes indexed by set $Q_l = \{1,\dots,N_l\}$. Let $j \in Q_l$ be a particular outcome within block $l$. Associated with it is a mean treatment effect
 \begin{equation}
 \Delta_{j,a} : = \mathbb{E} \left[ Y^1_{j,a} - Y^0_{j,a} | \bm{B} \in \mathcal{B}_0 \right], j \in Q_l.
 \end{equation}
