intro draft ready

--- a/heckman.bib
+++ b/heckman.bib
@@ -28574,6 +28574,19 @@ Welfare Reform Academy},
   Address                  = {London}
 }
 
+@Article{Fisher_1935_Inference_JRSS,
+  Title                    = {The Logic of Inductive Inference},
+  Author                   = {Fisher, R. A.},
+  Journal                  = {Journal of the Royal Statistical Society},
+  Year                     = {1935},
+  Number                   = {1},
+  Pages                    = {39--82},
+  Volume                   = {98},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.14}
+}
+
 @Book{Fisher_1925_StatMethods,
   Title                    = {Statistical Methods For Research Workers},
   Author                   = {Fisher, Ronald A.},
@@ -43877,6 +43890,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Number                   = {3},
   Pages                    = {317--334},
   Volume                   = {127}
+}
+
+@Article{Holme_1979_Sequential_SJS,
+  Title                    = {A Simple Sequentially Rejective Multiple Test Procedure},
+  Author                   = {Holm, Sture},
+  Journal                  = {Scandinavian Journal of Statistics},
+  Year                     = {1979},
+  Number                   = {2},
+  Pages                    = {65--70},
+  Volume                   = {6},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.13}
 }
 
 @Article{Holmberg_1980_CD,
@@ -71368,6 +71394,18 @@ Robinson, Lara Rachel},
   Timestamp                = {2009.11.11}
 }
 
+@Article{Rosenbaum_2005_Distribution_JRSS,
+  Title                    = {An Exact Distribution-Free Test Comparing Two Multivariate Distributions Based on Adjacency},
+  Author                   = {Rosenbaum, Paul R.},
+  Journal                  = {Journal of the Royal Statistical Society},
+  Year                     = {2005},
+  Number                   = {4},
+  Pages                    = {515--530},
+  Volume                   = {67},
+
+  Timestamp                = {2009.04.09}
+}
+
 @Book{Rosenbaum_2002_BOOKobservational,
   Title                    = {Observational Studies},
   Author                   = {Rosenbaum, Paul R.},
@@ -71377,19 +71415,6 @@ Robinson, Lara Rachel},
   Address                  = {New York},
   Edition                  = {2},
   Series                   = {Series in Statistics}
-}
-
-@Article{Rosenbaum_2005_Distribution_JRSS,
-  Title                    = {An Exact Distribution-Free Test Comparing Two Multivariate Distributions Based on Adjacency},
-  Author                   = {Rosenbaum, Paul R.},
-  Journal                  = {Journal of the Royal Statistical Society},
-  Year                     = {2005},
-
-  Number                   = {4},
-  Pages                    = {515--530},
-  Volume                   = {67},
-
-  Timestamp                = {2009.04.09}
 }
 
 @Book{Rosenbaum_1995_observational,
