--- a/output/raw-rosenbaum-table-age-exp_editedTvC.tex
+++ b/output/raw-rosenbaum-table-age-exp_editedTvC.tex
@@ -1,18 +1,18 @@
 % matrix: COMBINE file: raw-rosenbaum-table.tex  10 May 2018 09:03:15
 
-\begin{tabular}{lcc|lcc} 
+\begin{tabular}{lcclcc} 
 \toprule
- \textbf{(a) Early Childhood} & Females & Males & \textbf{(b) School Age}  & Females & Males \\
+ \textbf{(a) Childhood} & Females & Males & \textbf{(b) School Age}  & Females & Males \\
  \cmidrule(lr){2-3} \cmidrule(lr){5-6}
 \quad Avg. Effect Size &     0.392 &     0.259 				&  \quad Avg. Effect Size &     0.531 &     0.297 \\  
 \quad \% Positive &    95.833 &    75.000 				&	  \quad \% Positive &   100.000 &   100.000 \\  
-\quad \% Significant &    45.833 &    29.167 			& \quad \% Significant &    55.556 &    11.111 \\  
+\quad \% Significant &    45.833 &    29.167 			& \quad \% Significant  &    55.556 &    11.111 \\  
 \quad $p$-value &     \textbf{0.086} &     \textbf{0.086} 	&  \quad $p$-value &     \textbf{0.022} &     0.147 \\  
  \midrule
   \textbf{(c) Adult} &Females & Males  & \textbf{(d) All}  &Females & Males  \\
    \cmidrule(lr){2-3} \cmidrule(lr){5-6}
 \quad Avg. Effect Size &     0.291 &     0.227 						& \quad Avg. Effect Size&     0.381 &     0.254 \\  
-\quad \% Positive &    88.889 &    72.222 				&  \quad \% Positive &    94.118 &    78.431 \\  
+\quad \% Positive &    88.889 &    72.222 				&  \quad \% Positive  &    94.118 &    78.431 \\  
 \quad \% Significant &    33.333 &    16.667 			&  \quad \% Significant &    43.137 &    21.569 \\  
 \quad $p$-value &     \textbf{0.010} &     \textbf{0.086} 	&  \quad $p$-value &     \textbf{0.010} &     \textbf{0.086} \\  
 \bottomrule
